--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,8 +7,8 @@
         <p>{{ site.weare }}</p>
       </section>
       {%- include social.html -%}
-      <p class="copyright">
-        &copy; <a href="mailto:{{ site.email }}">{{ site.author }}</a>. Design: <a href="http://html5up.net">HTML5 UP</a>.
+      <p class="copyright">&copy; <a href="mailto:{{ site.email }}">{{ site.author }}</a></p>
+      <p class="copyright">. Design: <a href="http://html5up.net">HTML5 UP</a>.</p>
       </p>
     </div>
     <div>
