--- a/_layouts/multiverse.html
+++ b/_layouts/multiverse.html
@@ -16,7 +16,7 @@
             <img src="{{site.baseurl}}/assets/images/thumbs/{{ image.path | split: '/' | last | split: '.' | first }}.jpg" alt="{{ image.title }}" />
           </a>
           <h2>{{ image.title }}</h2>
-          <p><i>{{ image.species }}</i>
+          <p><i><b>{{ image.species }}</b></i>
           <br>
           {{ image.caption }}</p>
           </article>
