--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -226,6 +226,12 @@ input, select, textarea {
 		color: #ffffff;
 		font-weight: 300;
 	}
+	
+	mark {
+  background-color: yellow;
+  color: black;
+  font-style: italic;
+}
 
 	em, i {
 		font-style: italic;
