--- a/_layouts/multiverse.html
+++ b/_layouts/multiverse.html
@@ -18,7 +18,7 @@
           <h2>{{ image.title }}</h2>
           <p><mark>{{ image.species }}</mark>
           <br>
-          {{ image.caption }}</p>
+          <mark>{{ image.caption }}</mark></p>
           </article>
         {% endfor %}
 
