--- a/_layouts/multiverse.html
+++ b/_layouts/multiverse.html
@@ -16,7 +16,7 @@
             <img src="{{site.baseurl}}/assets/images/thumbs/{{ image.path | split: '/' | last | split: '.' | first }}.jpg" alt="{{ image.title }}" />
           </a>
           <h2>{{ image.title }}</h2>
-          <p><mark>{{ image.species }}</mark>
+          <p><mark><i>{{ image.species }}</i></mark>
           <br>
           <mark>{{ image.caption }}</mark></p>
           </article>
